Add profile and Fix password reset email

--- a/templates/reset-password.hbs
+++ b/templates/reset-password.hbs
@@ -7,7 +7,7 @@
         <h2 style="color: #292536; text-align: center">Alteração de senha</h2>
         <p>Para alterar sua senha clique no botão abaixo: </p>
         <div style="margin: 20px auto; width: 180px; padding: 10px 20px; background-color: #442d52; border-radius: 5px; text-align: center;">
-          <a href="http://localhost:3000/emailconfirmation/{{token}}" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #fcfcfc; font-size: 18px; margin: 0 auto;">Alterar Senha</a>
+          <a href="http://localhost:3000/reset/{{token}}" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #fcfcfc; font-size: 18px; margin: 0 auto;">Alterar Senha</a>
         </div>
       </div>
     </center>
